feat(telemetry): Add interactive TUI monitor launch and delay for log review